-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P1
-
Affects Version/s: hs24, hs25
-
Component/s: hotspot
-
b54
-
generic
-
generic
-
Verified
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8021916 | 8 | Rickard Backman | P1 | Closed | Fixed | b101 |
| JDK-8021720 | 7u60 | Rickard Backman | P1 | Resolved | Fixed | b01 |
| JDK-8021505 | 7u51 | Rickard Backman | P1 | Resolved | Fixed | b01 |
| JDK-8021457 | 7u45 | Rickard Backman | P1 | Closed | Fixed | b05 |
| JDK-8021066 | 7u40 | Rickard Backman | P1 | Closed | Fixed | b35 |
| JDK-8020693 | hs25 | Rickard Backman | P1 | Closed | Fixed |
On Windows-ia32:
# EXCEPTION_ACCESS_VIOLATION (0xc0000005) at pc=0x6fbc07a3, pid=4304, tid=3232
#
# JRE version: Java(TM) SE Runtime Environment (7.0_40-b26) (build 1.7.0_40-ea-b26)
# Java VM: Java HotSpot(TM) Server VM (24.0-b45 compiled mode windows-x86 )
# Problematic frame:
# V [jvm.dll+0x1507a3] frame::entry_frame_is_first+0x3
On Linux-amd64:
# SIGSEGV (0xb) at pc=0x00007fd1a2eea2e8, pid=5218, tid=140537977636608
#
# JRE version: Java(TM) SE Runtime Environment (7.0_40-b26) (build 1.7.0_40-ea-b26)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (24.0-b45 compiled mode linux-amd64 compressed oops)
# Problematic frame:
# V [libjvm.so+0x51a2e8] frame::entry_frame_is_first() const+0x8
Priority justification:
ILW = MMH => P3
Links to failures:
http://vmsqe-app.russia.sun.com/surl/Xv
http://vmsqe-app.russia.sun.com/surl/XP
Matching rules:
RULE nsk/sysdict/vm/stress/btree/btree005 Crash EXCEPTION_ACCESS_VIOLATION
RULE nsk/sysdict/vm/stress/chain/chain003 Crash SIGSEGV
- backported by
-
JDK-8021505 nsk/sysdict/vm/stress/chain tests crash the VM in 'entry_frame_is_first()'
-
- Resolved
-
-
JDK-8021720 nsk/sysdict/vm/stress/chain tests crash the VM in 'entry_frame_is_first()'
-
- Resolved
-
-
JDK-8020693 nsk/sysdict/vm/stress/chain tests crash the VM in 'entry_frame_is_first()'
-
- Closed
-
-
JDK-8021066 nsk/sysdict/vm/stress/chain tests crash the VM in 'entry_frame_is_first()'
-
- Closed
-
-
JDK-8021457 nsk/sysdict/vm/stress/chain tests crash the VM in 'entry_frame_is_first()'
-
- Closed
-
-
JDK-8021916 nsk/sysdict/vm/stress/chain tests crash the VM in 'entry_frame_is_first()'
-
- Closed
-
- relates to
-
JDK-8020701 Avoid crashes in WatcherThread
-
- Closed
-
-
JDK-8024648 7141246 & 8016131 break Zero port
-
- Closed
-
-
JDK-8022188 Make zero compile after 8016131 and 8016697
-
- Closed
-