8016131: nsk/sysdict/vm/stress/chain tests crash the VM in 'entry_frame_is_first()'

Reviewed-by: jrose, kvn, mgronlun